# id-bimap

./: CMakeLists.txt  README.md  id_bimap.h  main.cpp  tests.cpp
.github/workflows/: tests.yml
test/: simple_test.cpp
